wip - gutenberg reading

--- a/notebooks/gutenberg_dev.ipynb
+++ b/notebooks/gutenberg_dev.ipynb
@@ -28,28 +28,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "\n",
-    "\n",
-    "catalog_df = pl.read_csv(\n",
-    "    \"https://www.gutenberg.org/cache/epub/feeds/pg_catalog.csv\"\n",
-    ")"
+    "gutenberg_books = pl.read_parquet(\"../dataset_files/gutenberg_books.parquet\", n_rows=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -62,250 +50,35 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (10, 4)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>Text#</th><th>Title</th><th>Bookshelves</th><th>bookshelves_parsed</th></tr><tr><td>i64</td><td>str</td><td>str</td><td>object</td></tr></thead><tbody><tr><td>1</td><td>&quot;The Declaration of Independenc…</td><td>&quot;Politics; American Revolutiona…</td><td>{&#x27;Other&#x27;: [&#x27;Politics&#x27;, &#x27;American Revolutionary War&#x27;, &#x27;United States Law&#x27;], &#x27;Category&#x27;: [&#x27;Essays, Letters &amp; Speeches&#x27;, &#x27;History - American&#x27;, &#x27;History - Modern (1750+)&#x27;, &#x27;Philosophy &amp; Ethics&#x27;, &#x27;Politics&#x27;]}</td></tr><tr><td>2</td><td>&quot;The United States Bill of Righ…</td><td>&quot;Politics; American Revolutiona…</td><td>{&#x27;Other&#x27;: [&#x27;Politics&#x27;, &#x27;American Revolutionary War&#x27;, &#x27;United States Law&#x27;], &#x27;Category&#x27;: [&#x27;History - American&#x27;, &#x27;Law &amp; Criminology&#x27;]}</td></tr><tr><td>3</td><td>&quot;John F. Kennedy&#x27;s Inaugural Ad…</td><td>&quot;Category: Essays, Letters &amp; Sp…</td><td>{&#x27;Category&#x27;: [&#x27;Essays, Letters &amp; Speeches&#x27;, &#x27;History - American&#x27;, &#x27;Politics&#x27;]}</td></tr><tr><td>4</td><td>&quot;Lincoln&#x27;s Gettysburg Address\r\n",
-       "…</td><td>&quot;US Civil War; Category: Essays…</td><td>{&#x27;Other&#x27;: [&#x27;US Civil War&#x27;], &#x27;Category&#x27;: [&#x27;Essays, Letters &amp; Speeches&#x27;, &#x27;History - American&#x27;, &#x27;History - Modern (1750+)&#x27;]}</td></tr><tr><td>5</td><td>&quot;The United States Constitution&quot;</td><td>&quot;United States; Politics; Ameri…</td><td>{&#x27;Other&#x27;: [&#x27;United States&#x27;, &#x27;Politics&#x27;, &#x27;American Revolutionary War&#x27;, &#x27;United States Law&#x27;], &#x27;Category&#x27;: [&#x27;History - American&#x27;, &#x27;Law &amp; Criminology&#x27;, &#x27;Politics&#x27;]}</td></tr><tr><td>6</td><td>&quot;Give Me Liberty or Give Me Dea…</td><td>&quot;American Revolutionary War; Ca…</td><td>{&#x27;Other&#x27;: [&#x27;American Revolutionary War&#x27;], &#x27;Category&#x27;: [&#x27;Essays, Letters &amp; Speeches&#x27;, &#x27;History - American&#x27;]}</td></tr><tr><td>7</td><td>&quot;The Mayflower Compact&quot;</td><td>&quot;Category: History - American; …</td><td>{&#x27;Category&#x27;: [&#x27;History - American&#x27;, &#x27;History - Early Modern (c. 1450-1750)&#x27;, &#x27;History - Religious&#x27;]}</td></tr><tr><td>8</td><td>&quot;Abraham Lincoln&#x27;s Second Inaug…</td><td>&quot;US Civil War; Category: Essays…</td><td>{&#x27;Other&#x27;: [&#x27;US Civil War&#x27;], &#x27;Category&#x27;: [&#x27;Essays, Letters &amp; Speeches&#x27;, &#x27;History - American&#x27;, &#x27;History - Modern (1750+)&#x27;, &#x27;Politics&#x27;]}</td></tr><tr><td>9</td><td>&quot;Abraham Lincoln&#x27;s First Inaugu…</td><td>&quot;US Civil War; Category: Essays…</td><td>{&#x27;Other&#x27;: [&#x27;US Civil War&#x27;], &#x27;Category&#x27;: [&#x27;Essays, Letters &amp; Speeches&#x27;, &#x27;History - American&#x27;, &#x27;Politics&#x27;]}</td></tr><tr><td>10</td><td>&quot;The King James Version of the …</td><td>&quot;Banned Books List from the Ame…</td><td>{&#x27;Other&#x27;: [&#x27;Banned Books List from the American Library Association&#x27;], &#x27;Category&#x27;: [&#x27;Classics of Literature&#x27;, &#x27;Religion/Spirituality&#x27;]}</td></tr></tbody></table></div>"
+       "<small>shape: (10, 2)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>id</th><th>text</th></tr><tr><td>i64</td><td>str</td></tr></thead><tbody><tr><td>76645</td><td>&quot;﻿The Project Gutenberg eBook o…</td></tr><tr><td>76644</td><td>&quot;﻿The Project Gutenberg eBook o…</td></tr><tr><td>76604</td><td>&quot;﻿The Project Gutenberg eBook o…</td></tr><tr><td>76596</td><td>&quot;﻿The Project Gutenberg eBook o…</td></tr><tr><td>76660</td><td>&quot;﻿The Project Gutenberg eBook o…</td></tr><tr><td>76656</td><td>&quot;﻿The Project Gutenberg eBook o…</td></tr><tr><td>76591</td><td>&quot;﻿The Project Gutenberg eBook o…</td></tr><tr><td>76623</td><td>&quot;﻿The Project Gutenberg eBook o…</td></tr><tr><td>76570</td><td>&quot;﻿The Project Gutenberg eBook o…</td></tr><tr><td>76547</td><td>&quot;﻿The Project Gutenberg eBook o…</td></tr></tbody></table></div>"
       ],
       "text/plain": [
-       "shape: (10, 4)\n",
-       "┌───────┬──────────────────────────────┬─────────────────────────────┬─────────────────────────────┐\n",
-       "│ Text# ┆ Title                        ┆ Bookshelves                 ┆ bookshelves_parsed          │\n",
-       "│ ---   ┆ ---                          ┆ ---                         ┆ ---                         │\n",
-       "│ i64   ┆ str                          ┆ str                         ┆ object                      │\n",
-       "╞═══════╪══════════════════════════════╪═════════════════════════════╪═════════════════════════════╡\n",
-       "│ 1     ┆ The Declaration of           ┆ Politics; American          ┆ {'Other': ['Politics',      │\n",
-       "│       ┆ Independenc…                 ┆ Revolutiona…                ┆ 'Americ…                    │\n",
-       "│ 2     ┆ The United States Bill of    ┆ Politics; American          ┆ {'Other': ['Politics',      │\n",
-       "│       ┆ Righ…                        ┆ Revolutiona…                ┆ 'Americ…                    │\n",
-       "│ 3     ┆ John F. Kennedy's Inaugural  ┆ Category: Essays, Letters & ┆ {'Category': ['Essays,      │\n",
-       "│       ┆ Ad…                          ┆ Sp…                         ┆ Letters…                    │\n",
-       "│ 4     ┆ Lincoln's Gettysburg         ┆ US Civil War; Category:     ┆ {'Other': ['US Civil War'], │\n",
-       "│       ┆ Address\n",
-       "                     ┆ Essays…                     ┆ 'C…                         │\n",
-       "│       ┆ …                            ┆                             ┆                             │\n",
-       "│ 5     ┆ The United States            ┆ United States; Politics;    ┆ {'Other': ['United States', │\n",
-       "│       ┆ Constitution                 ┆ Ameri…                      ┆ 'P…                         │\n",
-       "│ 6     ┆ Give Me Liberty or Give Me   ┆ American Revolutionary War; ┆ {'Other': ['American        │\n",
-       "│       ┆ Dea…                         ┆ Ca…                         ┆ Revolutio…                  │\n",
-       "│ 7     ┆ The Mayflower Compact        ┆ Category: History -         ┆ {'Category': ['History -    │\n",
-       "│       ┆                              ┆ American; …                 ┆ Ameri…                      │\n",
-       "│ 8     ┆ Abraham Lincoln's Second     ┆ US Civil War; Category:     ┆ {'Other': ['US Civil War'], │\n",
-       "│       ┆ Inaug…                       ┆ Essays…                     ┆ 'C…                         │\n",
-       "│ 9     ┆ Abraham Lincoln's First      ┆ US Civil War; Category:     ┆ {'Other': ['US Civil War'], │\n",
-       "│       ┆ Inaugu…                      ┆ Essays…                     ┆ 'C…                         │\n",
-       "│ 10    ┆ The King James Version of    ┆ Banned Books List from the  ┆ {'Other': ['Banned Books    │\n",
-       "│       ┆ the …                        ┆ Ame…                        ┆ List …                      │\n",
-       "└───────┴──────────────────────────────┴─────────────────────────────┴─────────────────────────────┘"
+       "shape: (10, 2)\n",
+       "┌───────┬────────────────────────────────┐\n",
+       "│ id    ┆ text                           │\n",
+       "│ ---   ┆ ---                            │\n",
+       "│ i64   ┆ str                            │\n",
+       "╞═══════╪════════════════════════════════╡\n",
+       "│ 76645 ┆ ﻿The Project Gutenberg eBook o… │\n",
+       "│ 76644 ┆ ﻿The Project Gutenberg eBook o… │\n",
+       "│ 76604 ┆ ﻿The Project Gutenberg eBook o… │\n",
+       "│ 76596 ┆ ﻿The Project Gutenberg eBook o… │\n",
+       "│ 76660 ┆ ﻿The Project Gutenberg eBook o… │\n",
+       "│ 76656 ┆ ﻿The Project Gutenberg eBook o… │\n",
+       "│ 76591 ┆ ﻿The Project Gutenberg eBook o… │\n",
+       "│ 76623 ┆ ﻿The Project Gutenberg eBook o… │\n",
+       "│ 76570 ┆ ﻿The Project Gutenberg eBook o… │\n",
+       "│ 76547 ┆ ﻿The Project Gutenberg eBook o… │\n",
+       "└───────┴────────────────────────────────┘"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def parse_bookshelves(bookshelves_str: str | None) -> dict[str, list[str]]:\n",
-    "    \"\"\"Parse a bookshelves string into a dict of category -> list of values.\"\"\"\n",
-    "    bookshelves_dict: dict[str, list[str]] = {}\n",
-    "    if not bookshelves_str:\n",
-    "        return bookshelves_dict\n",
-    "    \n",
-    "    # Split by semicolon to get individual entries\n",
-    "    entries = bookshelves_str.split(';')\n",
-    "    for entry in entries:\n",
-    "        entry = entry.strip()\n",
-    "        if ':' in entry:\n",
-    "            # Split by colon to separate category from value\n",
-    "            category, value = entry.split(':', 1)\n",
-    "            category = category.strip()\n",
-    "            value = value.strip()\n",
-    "            \n",
-    "            # Add to dict, creating list if category doesn't exist\n",
-    "            if category not in bookshelves_dict:\n",
-    "                bookshelves_dict[category] = []\n",
-    "            bookshelves_dict[category].append(value)\n",
-    "        else:\n",
-    "            # Handle entries without a category (like \"Nobel Prizes in Literature\")\n",
-    "            if entry:  # Skip empty entries\n",
-    "                if \"Other\" not in bookshelves_dict:\n",
-    "                    bookshelves_dict[\"Other\"] = []\n",
-    "                bookshelves_dict[\"Other\"].append(entry)\n",
-    "    \n",
-    "    return bookshelves_dict\n",
-    "\n",
-    "\n",
-    "# Apply parsing to all rows\n",
-    "catalog_df = catalog_df.with_columns(\n",
-    "    pl.col(\"Bookshelves\").map_elements(parse_bookshelves, return_dtype=pl.Object).alias(\"bookshelves_parsed\")\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "catalog_df = catalog_df.filter(pl.col(\"Bookshelves\").is_not_null())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Filtered to 7607 books\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Counter({'Novels': 5595,\n",
-       "         'American Literature': 4638,\n",
-       "         'Science-Fiction & Fantasy': 3266,\n",
-       "         'Adventure': 1746,\n",
-       "         'Children & Young Adult Reading': 1131,\n",
-       "         'Short Stories': 1032,\n",
-       "         'Historical Novels': 733,\n",
-       "         'Humour': 727,\n",
-       "         'Parenthood & Family Relations': 27,\n",
-       "         'French Literature': 22,\n",
-       "         'Encyclopedias/Dictionaries/Reference': 18,\n",
-       "         'Nature/Gardening/Animals': 14,\n",
-       "         'German Literature': 13,\n",
-       "         'Art': 12,\n",
-       "         'Music': 11,\n",
-       "         'History - Schools & Universities': 11,\n",
-       "         'Psychiatry/Psychology': 11,\n",
-       "         'Old Age & the Elderly': 10,\n",
-       "         'How To ...': 10,\n",
-       "         'Cooking & Drinking': 7,\n",
-       "         'Teaching & Education': 6,\n",
-       "         'Drugs/Alcohol/Pharmacology': 5,\n",
-       "         'Architecture': 5,\n",
-       "         'Health & Medicine': 5,\n",
-       "         'Law & Criminology': 3,\n",
-       "         'Language & Communication': 3,\n",
-       "         'Environmental Issues': 2,\n",
-       "         'Sociology': 2,\n",
-       "         'Engineering & Technology': 2,\n",
-       "         'Archaeology & Anthropology': 1,\n",
-       "         'Sexuality & Erotica': 1,\n",
-       "         'Science - Earth/Agricultural/Farming': 1,\n",
-       "         'Nutrition': 1,\n",
-       "         'Economics': 1,\n",
-       "         'Russian Literature': 1,\n",
-       "         'Literature - Other': 1,\n",
-       "         'Business/Management': 1})"
-      ]
-     },
-     "execution_count": 28,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Filter for Science-Fiction & Fantasy or American Literature\n",
-    "# Also exclude certain categories\n",
-    "excluded_categories = {\n",
-    "    'Romance', 'Crime, Thrillers and Mystery', 'Essays, Letters & Speeches',\n",
-    "    'Poetry', 'British Literature', 'Biographies', 'Mythology, Legends & Folklore',\n",
-    "    'Travel Writing', 'Plays/Films/Dramas', 'Classics of Literature',\n",
-    "    'History - American', 'Journals', 'Sports/Hobbies', 'Philosophy & Ethics',\n",
-    "    'Religion/Spirituality', 'History - Warfare', 'Politics', 'History - Modern (1750+)',\n",
-    "    'Journalism/Media/Writing', 'Gender & Sexuality Studies'\n",
-    "}\n",
-    "\n",
-    "catalog_df = catalog_df.filter(\n",
-    "    pl.col(\"bookshelves_parsed\").map_elements(\n",
-    "        lambda x: (\n",
-    "            \"Category\" in x and (\n",
-    "                any(\"Science-Fiction\" in val or \"Fantasy\" in val for val in x[\"Category\"]) or\n",
-    "                any(\"American Literature\" in val for val in x[\"Category\"])\n",
-    "            ) and not any(val in excluded_categories for val in x[\"Category\"])\n",
-    "        ),\n",
-    "        return_dtype=pl.Boolean\n",
-    "    )\n",
-    ")\n",
-    "\n",
-    "catalog_df = catalog_df.filter(pl.col(\"Language\") == \"en\")\n",
-    "print(f\"Filtered to {len(catalog_df)} books\")\n",
-    "# Show value counts of all category values\n",
-    "from collections import Counter\n",
-    "\n",
-    "# Extract all category values from the bookshelves_parsed column\n",
-    "all_categories = []\n",
-    "for row in catalog_df.iter_rows(named=True):\n",
-    "    if row[\"bookshelves_parsed\"] and \"Category\" in row[\"bookshelves_parsed\"]:\n",
-    "        all_categories.extend(row[\"bookshelves_parsed\"][\"Category\"])\n",
-    "\n",
-    "# Count occurrences\n",
-    "category_counts = Counter(all_categories)\n",
-    "\n",
-    "category_counts"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tiktoken\n",
-    "from IPython.display import Markdown\n",
-    "from synthetic_data.tasks.writing import GutenbergBacktranslationFromTxt\n",
-    "\n",
-    "tiktoken_encoder = tiktoken.get_encoding(\"o200k_base\")\n",
-    "\n",
-    "first_sample = gutenberg_pq.sample(n=1)\n",
-    "task = GutenbergBacktranslationFromTxt()\n",
-    "total = 0\n",
-    "\n",
-    "for row in gutenberg_pq.sample(10).iter_rows(named=True):\n",
-    "    print(row.keys())\n",
-    "    display(Markdown(f\"**{row['title']}**\"))\n",
-    "    row_out = await task.preprocess_row(row)\n",
-    "    for row in row_out:\n",
-    "        n_tokens = sum([len(tiktoken_encoder.encode(par)) for par in row['text']])\n",
-    "        # print(\"-\"*100)\n",
-    "        # display(Markdown(row['text']))\n",
-    "        # print(f\"n_tokens: {n_tokens}\")\n",
-    "        total += 1\n",
-    "    print(total)\n",
-    "\n",
-    "print(total)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import re\n",
-    "from synthetic_data.utils import ldictl\n",
-    "\n",
-    "input = first_sample.to_dicts()\n",
-    "formatted_out = task.format_input_conversation(ldictl(input))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "formatted_out"
+    "gutenberg_books"
    ]
   }
  ],
